--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,10 +1,22 @@
 #Thu Apr 20 07:27:56 WAT 2017
 file.reference.commons-codec-1.10.jar=lib/commons-codec-1.10.jar
+file.reference.commons-io-2.4.jar=lib\\commons-io-2.4.jar
+file.reference.ekit.jar=lib\\ekit.jar
+file.reference.ekitapplet.jar=lib\\ekitapplet.jar
+file.reference.ekitappletspell.jar=lib\\ekitappletspell.jar
+file.reference.ekitspell.jar=lib\\ekitspell.jar
 file.reference.itext-2.1.7.jar=lib\\itext-2.1.7.jar
+file.reference.itextpdf-5.5.9.jar=lib\\itextpdf-5.5.9.jar
+file.reference.jdatepicker-1.3.4.jar=lib/jdatepicker-1.3.4.jar
+file.reference.microba-0.4.4.jar=lib\\microba-0.4.4.jar
 file.reference.pdfcrowd.jar=lib\\pdfcrowd.jar
+file.reference.rs2xml.jar=lib\\rs2xml.jar
+file.reference.xhtmlrenderer-1.0.0.jar=lib\\xhtmlrenderer-1.0.0.jar
+file.reference.xmlworker-5.5.11.jar=lib\\xmlworker-5.5.11.jar
 file.reference.yahp-1.3-sources.jar=lib\\yahp-1.3-sources.jar
 file.reference.yahp-1.3.jar=lib\\yahp-1.3.jar
 file.reference.yahp-internal.jar.zip=lib\\yahp-internal.jar.zip
+file.reference.yahp.jar=lib\\yahp.jar
 javadoc.splitindex=true
 build.classes.excludes=**/*.java,**/*.form
 file.reference.opencsv-3.9.jar=lib\\opencsv-3.9.jar
@@ -73,7 +85,19 @@ javac.classpath=\
     ${file.reference.pdfcrowd.jar}:\
     ${file.reference.yahp-1.3-sources.jar}:\
     ${file.reference.yahp-1.3.jar}:\
-    ${file.reference.yahp-internal.jar.zip}
+    ${file.reference.yahp-internal.jar.zip}:\
+    ${file.reference.yahp.jar}:\
+    ${file.reference.xhtmlrenderer-1.0.0.jar}:\
+    ${file.reference.xmlworker-5.5.11.jar}:\
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.ekit.jar}:\
+    ${file.reference.ekitapplet.jar}:\
+    ${file.reference.ekitappletspell.jar}:\
+    ${file.reference.ekitspell.jar}:\
+    ${file.reference.itextpdf-5.5.9.jar}:\
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${file.reference.microba-0.4.4.jar}
 javadoc.noindex=false
 annotation.processing.enabled.in.editor=false
 file.reference.xmlbeans-2.6.0.jar=lib/xmlbeans-2.6.0.jar
